# crypto_exchange

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
configs/: dev.json  test.json
crypto_exchange/: __main__.py  config.py  routes.py
crypto_exchange/api/: schemas.py  v1.py
crypto_exchange/exchange/: exceptions.py  resolver.py  schemas.py
crypto_exchange/exchange/providers/: abc.py  binance.py  kucoin.py
crypto_exchange/lib/: constants.py  utils.py
crypto_exchange/services/: redis.py  requests.py
crypto_exchange/tests/api/: __init__.py  test_v1.py
crypto_exchange/tests/exchange/: test_abc.py  test_binance.py  test_kucoin.py
